...
          >
            <Text
              className={`text-xs font-bold ${
                broadcast.user_has_acknowledged ? 'text-white' : 'text-slate-200'
              }`}
            >
              {broadcast.user_has_acknowledged ? "✓ I'm In!" : "I'm in"}
            </Text>
          </TouchableOpacity>
        </View>
      </View>
    </View>
  );
...
